--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,9 @@
 * {
     font-size: 16px;
-    font-family: LohitBengali, sans-serif;
+    font-family: 'Libre Baskerville', serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-@font-face {
-    src: url(/fonts/lohit-bengali.ttf);
-    font-family: LohitBengali;
 }
 
 :root {
