--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 * {
     font-size: 16px;
-    font-family: 'Libre Baskerville', serif;
+    font-family: "Open Sans", serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
